# BKI_ROS

./: .gitignore  CreateBag.ipynb  README.md  generate_results.py  train_encoder.py
Config/: ConvBKI_PerClass_Compound.yaml  Encoder.yaml  rellis.yaml  semantic_kitti.yaml
Data/: Rellis3D.py  utils.py
EndToEnd/: BKINet.py  environment.yml  ros_node.py  utils.py
EndToEnd/Configs/: KITTI.yaml  Neya.yaml  Rellis.yaml
EndToEnd/ConvBKI/: ConvBKI.py
EndToEnd/Segmentation/: spvcnn.py
Experiments/Baselines/: TestConvBKI.py  TestConvBKIFreeSpace.py  TestMotionNet.py  TestSMNet.py  TrainConvBKI.py  TrainMotionNet.py  TrainSMNet.py  TrainSMNetPreProcessed.py  utils.py  visualize_data.py
Experiments/EndToEnd/: BKINet.py  E2E_BKI.ipynb  NoiseStudy.py  main.py  utils.py
Experiments/spvnas/: README.md
Models/: Encoder.py  STPN_utils.py  mapping_utils.py  model_utils.py
neya_ros/catkin_ws/src/scene_understanding/: CMakeLists.txt  package.xml
neya_ros/catkin_ws/src/scene_understanding/msg/: AutonomyState.msg  BooleanMap.msg  ConfidenceMap.msg  Control.msg  Costmap.msg  DriveByWireState.msg  ElevationMap.msg  FusedCostMapLossyMsg.msg  FusedCostMapMsg.msg  GPSHeading.msg  GPSLatLong.msg  LatLonHeading.msg  LoggerControl.msg  LoggerStatus.msg  MapHeader.msg  PIQDInfo.msg  PointCloudWithOdom.msg  SensorCostmap.msg  StereoImagePair.msg  StereoImagePair_old.msg  UxIWorldModel.msg  VoxelData.msg  VoxelValue.msg  WheelEncoderData.msg
neya_ros/catkin_ws/src/scene_understanding/scripts/: keys  keys.pub  semantics_node.py  util.py
neya_ros/catkin_ws/src/scene_understanding/scripts/config/: default.py
neya_ros/catkin_ws/src/scene_understanding/scripts/core/: function.py
neya_ros/catkin_ws/src/scene_understanding/scripts/datasets/: ade20k.py  cityscapes.py  cocostuff.py  lip.py  pascal_ctx.py  rellis.py
neya_ros/catkin_ws/src/scene_understanding/scripts/experiments/rellis/: seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-3_wd5e-4_bs_12_epoch484.yaml
neya_ros/catkin_ws/src/scene_understanding/scripts/models/: seg_hrnet_ocr.py
neya_ros/catkin_ws/src/scene_understanding/srv/: SetCostMapAroundVehicle.srv
(+250 files in other folders)
