<?xml version="1.0"?>
<package format="2">
  <name>scene_understanding</name>
  <version>0.0.0</version>
  <description>The scene_understanding package</description>

  <author email="joshlfriesen@gmail.com">Josh Friesen</author>
  <maintainer email="joshlfriesen@gmail.com">Josh Friesen</maintainer>
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtim</build_depend>


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>




  <export>
  </export>
</package>
